# HFT

./: .gitignore  CMakeLists.txt  README.md  TECHNICAL_HIGHLIGHTS.md
benchmarks/: replay_benchmark.cpp
data/: sample_market_data.csv
include/hft/core/: market_event.hpp  order.hpp  types.hpp
include/hft/exchange/: simulated_exchange.hpp
include/hft/market_data/: csv_market_data.hpp  sequence_gap_detector.hpp
include/hft/metrics/: latency_stats.hpp
include/hft/oms/: order_manager.hpp
include/hft/order_book/: book.hpp
include/hft/replay/: market_event_journal.hpp
include/hft/risk/: risk_engine.hpp
include/hft/strategy/: fixed_spread_market_maker.hpp  strategy.hpp
scripts/: linux_perf_env_report.sh
src/: book.cpp  csv_market_data.cpp  fixed_spread_market_maker.cpp  main.cpp  market_event_journal.cpp  order_manager.cpp  risk_engine.cpp  sequence_gap_detector.cpp  simulated_exchange.cpp
tests/: test_main.cpp
